# tsdata

./: .gitignore  README.md  pyproject.toml
scripts/: retrieve.py
tests/: test_tsdata.py
tsdata/: __init__.py  cli.py  tsdata.py
tsdata.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
